# ChangeLog for net-im/kopete
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/kopete/ChangeLog,v 1.23 2003/10/09 13:22:01 caleb Exp $

*kopete-0.7.3 (09 Oct 2003)

  09 Oct 2003; Caleb Tennis <caleb@gentoo.org> kopete-0.7.3.ebuild:
  new version

  03 Oct 2003; Heinrich Wendel <lanius@gentoo.org> kopete-0.7.2.ebuild,
  kopete-0.7.ebuild:
  stable bump

*kopete-0.7.2 (10 Sep 2003)

  10 Sep 2003; Heinrich Wendel <lanius@gentoo.org> kopete-0.7.2.ebuild:
  version bump

  15 Aug 2003; Jason Wever <weeve@gentoo.org> kopete-0.7.1.ebuild:
  Added ~sparc to keywords.

*kopete-0.7.1 (11 Aug 2003)

  11 Aug 2003; Caleb Tennis <caleb@gentoo.org> kopete-0.7.1.ebuild:
  version bump

*kopete-0.7 (05 Aug 2003)

  05 Aug 2003; lanius@gentoo.org kopete-0.7.ebuild:
  version bump

  13 May 2003; Daniel Ahlberg <aliz@gentoo.org> kopete-0.6.2.ebuild :
  Unmasked for all archs.

*kopete-0.6.2 (29 Apr 2003)

  04 May 2003; Michele Balistreri <brain@gentoo.org> kopete-0.6.2.ebuild:
  Marking as stable on x86

  29 Apr 2003; Michele Balistreri <brain@gentoo.org> kopete-0.6.2.ebuild:
  Version bump

*kopete-0.6.1a (22 Feb 2003)

  05 Mar 2003; Bartosch Pixa <darkspecter@gentoo.org> kopete-0.6.1a.ebuild:
  set ~ppc in keywords

  22 Feb 2003; Hannes Mehnert <hannes@gentoo.org> kopete-0.6.1a.ebuild:
  version bump, thanks to Craig Callender <craig@mosquitonet.com> (bug #16161)

*kopete-0.6.1 (18 Feb 2003)

  18 Feb 2003; Bart Verwilst <verwilst@gentoo.org>
  New version, removed some oldies

*kopete-0.6.0 (10 Feb 2003)

  10 Feb 2003; Yannick Koehler <ykoehler@gentoo.org> kopete-0.6.0.ebuild files/digest-kopete-0.6.0 :
  Version Bump. Removed patches has they have been fixed inside the official package.

  03 Jan 2003; Hannes Mehnert <hannes@gentoo.org> kopete-0.5.ebuild:
  fix for kde-3.0.5a, solves #12686

  04 Nov 2002; Hannes Mehnert <hannes@gentoo.org> kopete-0.5.ebuild: