@@ -1,10 +1,6 @@
-MD5 1659ff308985b405f5e8ab6325f9e9a5 kopete-0.7.2.ebuild 430
-MD5 d3269f3a21ab6171ad31eaafb0c145ba kopete-0.7.1.ebuild 428
-MD5 878acadb4d67c92d7edc8701bcc6993a kopete-0.7.3.ebuild 425
-MD5 4354203148bac897bd4265c8f48a7e1d ChangeLog 2873
+MD5 4c8734235a9e1df2223b4e6dc0569fe8 kopete-0.7.3.ebuild 473
+MD5 a21f2cebbcca227efe4777f768a126e6 ChangeLog 3041
 MD5 503ccb1138f9c49f0855884d830988a6 metadata.xml 253
 MD5 92cdbbd2da25ccce3285dae34cf54da9 kopete-0.6.2.ebuild 419
 MD5 18785a981903756a9f42eda8e22a492e files/digest-kopete-0.6.2 65
-MD5 a36cc14d557c482c0a4a7fffae301380 files/digest-kopete-0.7.1 65
-MD5 d29670ae963f399a751197c3cc91f188 files/digest-kopete-0.7.2 66
 MD5 5a8e133885d535a8c49efe426aec1fb7 files/digest-kopete-0.7.3 66
