@@ -1,1 +1,0 @@
-MD5 cac4b0cecb1191305b33fcc0f4365a27 kopete-0.7.1.tar.gz 5245018
