@@ -1,1 +1,0 @@
-MD5 c1158d8b9f73e158344123eb8bc3505e kopete-0.7.2.tar.bz2 3510032
