@@ -1,13 +1,0 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/kopete/kopete-0.7.2.ebuild,v 1.2 2003/10/03 12:37:30 lanius Exp $
-
-inherit kde-base
-need-kde 3
-
-IUSE=""
-LICENSE="GPL-2"
-KEYWORDS="x86 ~ppc ~sparc"
-DESCRIPTION="The KDE Instant Messenger"
-SRC_URI="mirror://sourceforge/kopete/${P}.tar.bz2"
-HOMEPAGE="http://kopete.kde.org/"
