@@ -1,6 +1,10 @@
 # ChangeLog for net-im/kopete
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/kopete/ChangeLog,v 1.23 2003/10/09 13:22:01 caleb Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/kopete/ChangeLog,v 1.24 2003/10/19 20:13:09 lanius Exp $
+
+  19 Oct 2003; Heinrich Wendel <lanius@gentoo.org> kopete-0.7.1.ebuild,
+  kopete-0.7.2.ebuild, kopete-0.7.3.ebuild:
+  stable bump / cleanups / libxslt and libxml dep
 
 *kopete-0.7.3 (09 Oct 2003)
 
